# naifuru

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-issue-template.md
src/: analysis_config.rs  cli.rs  error.rs  lib.rs  logging.rs  main.rs  regex_pattern.rs  util.rs
src/extractor/: extractor.rs  jp_nied_knet_une.rs  tw_paleart_sac.rs
src/model/: ir.rs
