[package]
name = "naifuru"
version = "0.1.0-alpha"
authors = ["Yurari <320sl91994@gmail.com>"]
edition = "2024"

[dependencies]
toml = "0.8.19"
log = "0.4.22"
thiserror = "2.0.7"
env_logger = "0.11.5"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
byteorder = "1.5.0"
regex = "1.11.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
panic = "abort"

[dev-dependencies]
tempfile = "3.14.0"
